<resources>
    <string name="app_name">FoodRunner</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="password">Enter the Password</string>
    <string name="Name">Enter Your Name</string>
    <string name="Email">Enter Email Address</string>
    <string name="mobNumber"> Enter Mobile Number(10 digits)</string>
    <string name="DA">Delivery Address</string>
    <string name="Password">Choose a password(Min 4 characters)</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="welcome">Welcome!</string>
    <string name="preference_file_name">Food Preferences</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_home">Home Fragment</string>
    <string name="profile_fragment">My Profile</string>
    <string name="home_fragment">Home</string>
    <string name="favourite_resturants_fragment">Favourites Resturants</string>
    <string name="FAQs_fragment">FAQS Fragment</string>
    <string name="LogOut_fragment">LOGOUT Fragment</string>
    <string name="name_of_the_restaurants">Name of Restaurants</string>
    <string name="Signup">Don\'t have an account?Sign up now</string>
</resources>